fix:cleaned up whitespace

--- a/src/views/home/Home.css
+++ b/src/views/home/Home.css
@@ -228,7 +228,7 @@ footer a {
 }
 
 .parallax {
-   height: 210px;
+   height: 240px;
    z-index: -1;
 }
 
